# SPL

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  USER-GUIDE.md  pyproject.toml
docs/: SPL-paper  claude-prompt.md  grammar.ebnf  history-lessons.md
docs/SPL2/: spl2-paper-outline.md  spl2-specification-v2.md  workplan.md
docs/dev/: co-creation-log.md  design-v1.md
docs/how-to-init/: CLAUDE-prompt.md  CLAUDE-prompted.md  chat-history.html  readme.md
docs/paper/: collab_email.md  readme-tests.md  readme.md  references.bib  run_tex2pdf.sh  spl-paper-v1.0.tex  spl-paper.aux  spl-paper.bbl  spl-paper.blg  spl-paper.out  spl-paper.tex
docs/paper/data/: experiment1_developer_experience.json  experiment2_token_optimization.json  experiment3_cost_estimation.json  experiment4_explain_showcase.json  experiment5_feature_verification.json
docs/paper/figures/: arch_diagram.mmd
examples/benchmark/gemma4/: chat-2026-04-03.md
examples/benchmark/qwen/: qwen3.5-chat.md
examples/format-cte-join/: claude-chat-20260214.md  readme-test.html  readme.md  ri_family_v1.spl  ri_family_v2.spl  ri_family_v2_ollama.spl  ri_family_v2_openrouter.spl
examples/format-cte-join/use-case-top-papers/: papers-by-top-prize-winners-recently_v1.spl  readme.md  response-chatgpt.md  response-gemini.md  run_tests.sh  use-case-2-top-papers.md
examples/format-cte-join/use-case-top-papers/llm_responses/: glm-llm_benchmark_blog.docx  glm-recent_papers_prize_winners-v1.docx  glm-recent_papers_prize_winners-v2.docx  response-claude-opus46.md  response-deepseek.md  response-glm.md  response-grok-x.md  response-kimi-award_winners_papers_2020_2025.md  response-perplexity.md  response-qwen.md  response-qwen3.6-API-20260407.md  response-qwen3.6-Web-20260407.md
examples/format-cte-join/use-case-top-papers/results/: spl_benchmark-auto.json  spl_benchmark-v2.1.json  spl_benchmark-v2.2.json  spl_benchmark-v2.json  spl_benchmark.json  spl_cli.json  spl_explain.md
examples/python-codes/: get_fib.py  get_primes.py  get_primes_qwen.py  get_primes_qwen_bug.py  splflow-20260216-221652.md
spl/: __init__.py  analyzer.py  ast_nodes.py  cli.py  executor.py  explain.py  functions.py  lexer.py  optimizer.py  parser.py  token_counter.py  tokens.py
spl/adapters/: __init__.py  base.py  claude_cli.py  cloud_direct.py  ollama.py  openrouter.py
spl/storage/: __init__.py  chroma.py  memory.py  vector.py
tests/: test_lexer.py  test_optimizer.py  test_parser.py  test_storage.py
tests/benchmarks/: __init__.py  bench_cost_estimation.py  bench_developer_experience.py  bench_explain_showcase.py  bench_feature_verification.py  bench_token_optimization.py  bench_utils.py  generate_figures.py  imperative_baselines.py
