[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spl1"
version = "0.1.1"
description = "Structured Prompt Language v1.0 — SQL for LLM Context Management (superseded by spl-llm>=3.0.0)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Digital Duck", email = "p2p2learn@outlook.com"},
]
keywords = ["llm", "prompt-engineering", "sql", "declarative", "context-management"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24",
    "httpx>=0.25",
    "tiktoken>=0.5",
    "pyyaml>=6.0",
    "dd-logging>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
chroma = [
    "chromadb>=0.4",
]

[project.scripts]
spl = "spl.cli:main"

[project.urls]
Homepage = "https://github.com/digital-duck/SPL"
Repository = "https://github.com/digital-duck/SPL"
"arXiv Paper" = "https://arxiv.org/abs/2602.21257"
"Successor Package" = "https://pypi.org/project/spl-llm/"

[tool.setuptools.packages.find]
include = ["spl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
